# js_modules

./: index.html  main.js  module2.js  module3.js  style.css
wasm_in_js_modules/: Cargo.toml  style.css
wasm_in_js_modules/src/: lib.rs  main.rs
